--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
-							
+
 							<!-- Mobile -->
 							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<div id="google_translate_element"></div>
@@ -110,16 +110,16 @@
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
 									<a href="https://www.twitter.com/royenix" class="social social-twitter"
-										aria-label="twitter" title="twitter" target="_blank"><i
+										aria-label="twitter" title="Twitter" target="_blank"><i
 											class="ui-twitter"></i></a>
 									<a href="https://www.facebook.com/royenix" class="social social-facebook"
-										aria-label="facebook" title="facebook" target="_blank"><i
+										aria-label="facebook" title="Facebook" target="_blank"><i
 											class="ui-facebook"></i></a>
 									<a href="https://www.youtube.com/royenix" class="social social-youtube"
-										aria-label="youtube" title="google plus" target="_blank"><i
+										aria-label="youtube" title="Youtube" target="_blank"><i
 											class="ui-youtube"></i></a>
 									<a href="https://www.instagram.com/royenix" class="social social-instagram"
-										aria-label="instagram" title="instagram" target="_blank"><i
+										aria-label="instagram" title="Instagram" target="_blank"><i
 											class="ui-instagram"></i></a>
 								</div>
 							</div>
@@ -132,15 +132,14 @@
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
 								<a href="https://www.twitter.com/royenix" class="social social-twitter"
-									aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
+									aria-label="twitter" title="Twitter" target="_blank"><i class="ui-twitter"></i></a>
 								<a href="https://www.facebook.com/royenix" class="social social-facebook"
-									aria-label="facebook" title="facebook" target="_blank"><i
+									aria-label="facebook" title="Facebook" target="_blank"><i
 										class="ui-facebook"></i></a>
 								<a href="https://www.youtube.com/royenix" class="social social-youtube"
-									aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
+									aria-label="youtube" title="Youtube" target="_blank"><i class="ui-youtube"></i></a>
 								<a href="https://www.instagram.com/royenix" class="social social-instagram"
-									aria-label="instagram" title="instagram" target="_blank"><i
+									aria-label="instagram" title="Instagram" target="_blank"><i
 										class="ui-instagram"></i></a>
 							</div>
 						</div>
@@ -376,16 +375,16 @@
 								<div class="widget">
 									<div class="socials">
 										<a href="https://www.twitter.com/royenix" class="social social-twitter"
-											aria-label="twitter" title="twitter" target="_blank"><i
+											aria-label="twitter" title="Twitter" target="_blank"><i
 												class="ui-twitter"></i></a>
 										<a href="https://www.facebook.com/royenix" class="social social-facebook"
-											aria-label="facebook" title="facebook" target="_blank"><i
+											aria-label="facebook" title="Facebook" target="_blank"><i
 												class="ui-facebook"></i></a>
 										<a href="https://www.youtube.com/royenix" class="social social-youtube"
-											aria-label="youtube" title="google plus" target="_blank"><i
+											aria-label="youtube" title="Youtube" target="_blank"><i
 												class="ui-youtube"></i></a>
 										<a href="https://www.instagram.com/royenix" class="social social-instagram"
-											aria-label="instagram" title="instagram" target="_blank"><i
+											aria-label="instagram" title="Instagram" target="_blank"><i
 												class="ui-instagram"></i></a>
 									</div>
 								</div>
@@ -420,15 +419,15 @@
 	</script>
 	<script type="text/javascript"
 		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-		<script type="text/javascript">
-			function googleTranslateElementInit() {
-				new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
-			}
-		</script>
-		<script type="text/javascript"
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+		}
+	</script>
+	<script type="text/javascript"
 		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-		
-		<!-- jQuery Scripts -->
+
+	<!-- jQuery Scripts -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script>
