--- a/delivery-service.html
+++ b/delivery-service.html
@@ -90,7 +90,7 @@
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
-							
+
 							<!-- Mobile -->
 							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<div id="google_translate_element"></div>
@@ -111,16 +111,16 @@
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
 									<a href="https://www.twitter.com/royenix" class="social social-twitter"
-										aria-label="twitter" title="twitter" target="_blank"><i
+										aria-label="twitter" title="Twitter" target="_blank"><i
 											class="ui-twitter"></i></a>
 									<a href="https://www.facebook.com/royenix" class="social social-facebook"
-										aria-label="facebook" title="facebook" target="_blank"><i
+										aria-label="facebook" title="Facebook" target="_blank"><i
 											class="ui-facebook"></i></a>
 									<a href="https://www.youtube.com/royenix" class="social social-youtube"
-										aria-label="youtube" title="google plus" target="_blank"><i
+										aria-label="youtube" title="Youtube" target="_blank"><i
 											class="ui-youtube"></i></a>
 									<a href="https://www.instagram.com/royenix" class="social social-instagram"
-										aria-label="instagram" title="instagram" target="_blank"><i
+										aria-label="instagram" title="Instagram" target="_blank"><i
 											class="ui-instagram"></i></a>
 								</div>
 							</div>
@@ -133,15 +133,14 @@
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
 								<a href="https://www.twitter.com/royenix" class="social social-twitter"
-									aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
+									aria-label="twitter" title="Twitter" target="_blank"><i class="ui-twitter"></i></a>
 								<a href="https://www.facebook.com/royenix" class="social social-facebook"
-									aria-label="facebook" title="facebook" target="_blank"><i
+									aria-label="facebook" title="Facebook" target="_blank"><i
 										class="ui-facebook"></i></a>
 								<a href="https://www.youtube.com/royenix" class="social social-youtube"
-									aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
+									aria-label="youtube" title="Youtube" target="_blank"><i class="ui-youtube"></i></a>
 								<a href="https://www.instagram.com/royenix" class="social social-instagram"
-									aria-label="instagram" title="instagram" target="_blank"><i
+									aria-label="instagram" title="Instagram" target="_blank"><i
 										class="ui-instagram"></i></a>
 							</div>
 						</div>
@@ -452,16 +451,16 @@
 								<div class="widget">
 									<div class="socials">
 										<a href="https://www.twitter.com/royenix" class="social social-twitter"
-											aria-label="twitter" title="twitter" target="_blank"><i
+											aria-label="twitter" title="Twitter" target="_blank"><i
 												class="ui-twitter"></i></a>
 										<a href="https://www.facebook.com/royenix" class="social social-facebook"
-											aria-label="facebook" title="facebook" target="_blank"><i
+											aria-label="facebook" title="Facebook" target="_blank"><i
 												class="ui-facebook"></i></a>
 										<a href="https://www.youtube.com/royenix" class="social social-youtube"
-											aria-label="youtube" title="google plus" target="_blank"><i
+											aria-label="youtube" title="Youtube" target="_blank"><i
 												class="ui-youtube"></i></a>
 										<a href="https://www.instagram.com/royenix" class="social social-instagram"
-											aria-label="instagram" title="instagram" target="_blank"><i
+											aria-label="instagram" title="Instagram" target="_blank"><i
 												class="ui-instagram"></i></a>
 									</div>
 								</div>
