--- a/icons.html
+++ b/icons.html
@@ -128,16 +128,16 @@
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
 									<a href="https://www.twitter.com/royenix" class="social social-twitter"
-										aria-label="twitter" title="twitter" target="_blank"><i
+										aria-label="twitter" title="Twitter" target="_blank"><i
 											class="ui-twitter"></i></a>
 									<a href="https://www.facebook.com/royenix" class="social social-facebook"
-										aria-label="facebook" title="facebook" target="_blank"><i
+										aria-label="facebook" title="Facebook" target="_blank"><i
 											class="ui-facebook"></i></a>
 									<a href="https://www.youtube.com/royenix" class="social social-youtube"
-										aria-label="youtube" title="google plus" target="_blank"><i
+										aria-label="youtube" title="Youtube" target="_blank"><i
 											class="ui-youtube"></i></a>
 									<a href="https://www.instagram.com/royenix" class="social social-instagram"
-										aria-label="instagram" title="instagram" target="_blank"><i
+										aria-label="instagram" title="Instagram" target="_blank"><i
 											class="ui-instagram"></i></a>
 								</div>
 							</div>
@@ -151,15 +151,14 @@
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
 								<a href="https://www.twitter.com/royenix" class="social social-twitter"
-									aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
+									aria-label="twitter" title="Twitter" target="_blank"><i class="ui-twitter"></i></a>
 								<a href="https://www.facebook.com/royenix" class="social social-facebook"
-									aria-label="facebook" title="facebook" target="_blank"><i
+									aria-label="facebook" title="Facebook" target="_blank"><i
 										class="ui-facebook"></i></a>
 								<a href="https://www.youtube.com/royenix" class="social social-youtube"
-									aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
+									aria-label="youtube" title="Youtube" target="_blank"><i class="ui-youtube"></i></a>
 								<a href="https://www.instagram.com/royenix" class="social social-instagram"
-									aria-label="instagram" title="instagram" target="_blank"><i
+									aria-label="instagram" title="Instagram" target="_blank"><i
 										class="ui-instagram"></i></a>
 							</div>
 						</div>
@@ -1117,14 +1116,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										<a href="#" class="social social-twitter" aria-label="twitter" title="Twitter"
 											target="_blank"><i class="ui-twitter"></i></a>
 										<a href="#" class="social social-facebook" aria-label="facebook"
-											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube"
-											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+											title="Facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube" title="Youtube"
+											target="_blank"><i class="ui-youtube"></i></a>
 										<a href="#" class="social social-instagram" aria-label="instagram"
-											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+											title="Instagram" target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
