--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
 									<a href="https://www.twitter.com/royenix" class="social social-twitter"
-										aria-label="twitter" title="twitter" target="_blank"><i
+										aria-label="twitter" title="Twitter" target="_blank"><i
 											class="ui-twitter"></i></a>
 									<a href="https://www.facebook.com/royenix" class="social social-facebook"
-										aria-label="facebook" title="facebook" target="_blank"><i
+										aria-label="facebook" title="Facebook" target="_blank"><i
 											class="ui-facebook"></i></a>
 									<a href="https://www.youtube.com/royenix" class="social social-youtube"
-										aria-label="youtube" title="google plus" target="_blank"><i
+										aria-label="youtube" title="Youtube" target="_blank"><i
 											class="ui-youtube"></i></a>
 									<a href="https://www.instagram.com/royenix" class="social social-instagram"
-										aria-label="instagram" title="instagram" target="_blank"><i
+										aria-label="instagram" title="Instagram" target="_blank"><i
 											class="ui-instagram"></i></a>
 								</div>
 							</div>
@@ -139,22 +139,20 @@
 						<div class="nav__footer d-lg-block d-none">
 							<div class="socials">
 								<a href="https://www.twitter.com/royenix" class="social social-twitter"
-									aria-label="twitter" title="twitter" target="_blank"><i
-										class="ui-twitter"></i></a>
+									aria-label="twitter" title="Twitter" target="_blank"><i class="ui-twitter"></i></a>
 								<a href="https://www.facebook.com/royenix" class="social social-facebook"
-									aria-label="facebook" title="facebook" target="_blank"><i
+									aria-label="facebook" title="Facebook" target="_blank"><i
 										class="ui-facebook"></i></a>
 								<a href="https://www.youtube.com/royenix" class="social social-youtube"
-									aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
+									aria-label="youtube" title="Youtube" target="_blank"><i class="ui-youtube"></i></a>
 								<a href="https://www.instagram.com/royenix" class="social social-instagram"
-									aria-label="instagram" title="instagram" target="_blank"><i
+									aria-label="instagram" title="Instagram" target="_blank"><i
 										class="ui-instagram"></i></a>
 							</div>
 
 							<span class="copyright" style="color: #868686;">
 								© 2022 <a href="#">Royenix</a>. All Rights Reserved.
-							<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
+								<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
 							</span>
 						</div>
 
@@ -461,7 +459,7 @@
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
 									<!-- <a href="portfolio-single.html"> -->
-										<img src="img/portfolio/v-2/1.jpg" alt="" class="project__img">
+									<img src="img/portfolio/v-2/1.jpg" alt="" class="project__img">
 									<!-- </a> -->
 								</div>
 							</div>
@@ -470,7 +468,8 @@
 								<div class="project-1__description">
 									<h3 class="project-1__title">Scaffolding</h3>
 									<p class="project-1__text">For each project we establish relationships with partners
-										For the ordinary and the extraordinary scaffolding challenges, Royenix is the right choice.</p>
+										For the ordinary and the extraordinary scaffolding challenges, Royenix is the
+										right choice.</p>
 									<a href="./scaffolding.html" class="read-more">
 										<span class="read-more__text">Read More</span>
 										<i class="ui-arrow-right read-more__icon"></i>
@@ -483,7 +482,7 @@
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
 									<!-- <a href="portfolio-single.html"> -->
-										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
+									<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
 									<!-- </a> -->
 								</div>
 							</div>
@@ -491,7 +490,8 @@
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
 									<h3 class="project-1__title">Delivery Service</h3>
-									<p class="project-1__text">For each project we establish relationships with partners.</p>
+									<p class="project-1__text">For each project we establish relationships with
+										partners.</p>
 									<a href="./delivery-service.html" class="read-more">
 										<span class="read-more__text">Read More</span>
 										<i class="ui-arrow-right read-more__icon"></i>
@@ -679,16 +679,16 @@
 								<div class="widget">
 									<div class="socials">
 										<a href="https://www.twitter.com/royenix" class="social social-twitter"
-											aria-label="twitter" title="twitter" target="_blank"><i
+											aria-label="twitter" title="Twitter" target="_blank"><i
 												class="ui-twitter"></i></a>
 										<a href="https://www.facebook.com/royenix" class="social social-facebook"
-											aria-label="facebook" title="facebook" target="_blank"><i
+											aria-label="facebook" title="Facebook" target="_blank"><i
 												class="ui-facebook"></i></a>
 										<a href="https://www.youtube.com/royenix" class="social social-youtube"
-											aria-label="youtube" title="google plus" target="_blank"><i
+											aria-label="youtube" title="Youtube" target="_blank"><i
 												class="ui-youtube"></i></a>
 										<a href="https://www.instagram.com/royenix" class="social social-instagram"
-											aria-label="instagram" title="instagram" target="_blank"><i
+											aria-label="instagram" title="Instagram" target="_blank"><i
 												class="ui-instagram"></i></a>
 									</div>
 								</div>
