--- a/delivery-service.html
+++ b/delivery-service.html
@@ -166,7 +166,7 @@
 			</section> <!-- end page title -->
 
 			<!-- CTA -->
-			<div class="call-to-action text-center">
+			<div class="call-to-action text-center" style="padding-bottom: 125px;">
 				<div class="call-to-action__container">
 					<h3 class="call-to-action__title">
 						Join The Rider Nation!
@@ -284,7 +284,7 @@
 			</div>
 			<!-- Service -->
 			<section class="section-wrap pb-0">
-				<div>
+				<div class="box-offset-container">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-10">
