--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							data-easeout="default" data-slotamount="1" data-masterspeed="1200" data-delay="8000"
 							data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home/1.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/page-title/services2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -193,7 +193,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Australian Museum<span class="hero-dot">.</span>
+								}]' data-splitout="none">Scaffolding<span class="hero-dot">.</span>
 							</div>
 
 							<!-- HERO SUBTITLE -->
@@ -212,7 +212,8 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								}]'>For each project we establish relationships with partners<br>
+								For the ordinary and the extraordinary scaffolding challenges,<br> Royenix is the right choice.
 							</div>
 
 							<!-- BUTTON -->
@@ -229,7 +230,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									}]'><a href='./scaffolding.html' class='btn btn--lg btn--color'>View Service</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -238,7 +239,7 @@
 						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/portfolio/v-2/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -257,7 +258,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Texas Children’s Hospital<span class="hero-dot">.</span>
+								}]' data-splitout="none">Delivery Service<span class="hero-dot">.</span>
 							</div>
 
 							<!-- HERO SUBTITLE -->
@@ -276,7 +277,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								}]'>For each project we establish relationships with partners.<br>
 							</div>
 
 							<!-- BUTTON -->
@@ -293,71 +294,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
-							</div>
-
-						</li> <!-- end slide 1 -->
-
-						<!-- SLIDE 3 -->
-						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
-							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
-							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home/3.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
-								data-bgparallax="7" class="rev-slidebg">
-
-							<!-- HERO TITLE -->
-							<div class="tp-caption hero-text" data-x="30" data-y="center"
-								data-voffset="[-70,-180,-200,-240]" data-fontsize="[72,62,52,40]"
-								data-lineheight="[72,62,52,40]" data-width="[none, none, none, 300]"
-								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
-									"delay":1000,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Suburban Home<span class="hero-dot">.</span>
-							</div>
-
-							<!-- HERO SUBTITLE -->
-							<div class="tp-caption small-text" data-x="30" data-y="center"
-								data-voffset="[30,-80,-100,-100]" data-fontsize="[21,21,21,21]" data-lineheight="34"
-								data-width="[none, none, none, 300]" data-whitespace="[nowrap, nowrap, nowrap, normal]"
-								data-frames='[{
-									"delay":1100,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
-							</div>
-
-							<!-- BUTTON -->
-							<div class="tp-caption" data-x="30" data-y="center" data-voffset="[130,20,-10,40]"
-								data-lineheight="55" data-hoffset="0" data-frames='[{
-										"delay":1200,
-										"speed":900,
-										"frame":"0",
-										"from":"y:150px;opacity:0;",
-										"ease":"Power3.easeOut",
-										"to":"o:1;"
-										},{
-										"delay":"wait",
-										"speed":1000,
-										"frame":"999",
-										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									}]'><a href='./delivery-service.html' class='btn btn--lg btn--color'>View Service</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
