--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="author" content="M Saim Raza">
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<!-- Css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/font-icons.css" />
@@ -213,7 +213,8 @@
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
 								}]'>For each project we establish relationships with partners<br>
-								For the ordinary and the extraordinary scaffolding challenges,<br> Royenix is the right choice.
+								For the ordinary and the extraordinary scaffolding challenges,<br> Royenix is the right
+								choice.
 							</div>
 
 							<!-- BUTTON -->
@@ -304,7 +305,7 @@
 			</div>
 
 			<!-- Intro -->
-			<section class="section-wrap">
+			<section class="section-wrap animate__animated animate__bounceInUp animate__delay-2s">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-10">
