--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 			</section> <!-- end services -->
 
 			<!-- Portfolio -->
-			<section class="section-wrap pt-48" data-aos="slide-up">
+			<section class="section-wrap pt-48" >
 				<div class="container">
 					<div class="title-row mb-48">
 						<p class="subtitle">Portfolio</p>
@@ -504,10 +504,10 @@
 			</section> <!-- end testimonials -->
 
 			<!-- Contact -->
-			<section class="section-wrap" data-aos="slide-up">
+			<section class="section-wrap">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4 mb-lg-48">
+						<div class="col-lg-4 mb-lg-48" data-aos="fade-right">
 							<div class="title-row">
 								<p class="subtitle">Contact</p>
 								<h2 class="section-title">Get in Touch</h2>
@@ -560,7 +560,7 @@
 							</form>
 						</div>
 
-						<div class="col-lg-7 offset-lg-1">
+						<div class="col-lg-7 offset-lg-1" data-aos="fade-left">
 							<!-- Google Map -->
 							<div id="google-map" class="gmap" data-address="Karachi"
 								style="position: relative; overflow: hidden;">
