--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 							</div>
 
 							<!-- Contact Form -->
-							<form id="contact-form" class="contact-form material" method="post" action="#">
+							<form id="contact-form" class="contact-form material" method="post" action="./contact.php">
 
 								<!-- Name -->
 								<div class="material__form-group form-group">
