--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
 							<h2 class="section-title">Get a Free Quote</h2>
 							<p class="mb-40">If you have any question about project cost, get in touch.</p>
 							<!-- Contact Form -->
-							<form id="contact-form" class="contact-form material" method="post" action="#">
+							<form id="contact-form" class="contact-form material" method="post" action="./contact.php">
 
 								<div class="row">
 									<div class="col-lg-6">
