--- a/delivery-service.html
+++ b/delivery-service.html
@@ -183,7 +183,7 @@
 
 							<!-- Modal body -->
 							<div class="modal-body">
-								<form id="Rider-form" class="contact-form material" method="post" action="#">
+								<form id="Rider-form" class="contact-form material" method="post" action="./rider.php">
 
 									<div class="row">
 										<div class="col-lg-6">
