--- a/delivery-service.html
+++ b/delivery-service.html
@@ -223,9 +223,9 @@
 										<div class="col-lg-6">
 											<!-- QID No -->
 											<div class="material__form-group form-group">
-												<input type="number" name="qid-no" id="qid-no"
+												<input type="number" name="qidNo" id="qidNo"
 													class="form-input material__input" required="">
-												<label for="qid-no" class="material__label">QID No.
+												<label for="qidNo" class="material__label">QID No.
 													<abbr title="required" class="required">*</abbr>
 												</label>
 												<span class="material__underline"></span>
@@ -234,9 +234,9 @@
 										<div class="col-lg-6">
 											<!-- QID Expiry -->
 											<div class="material__form-group form-group">
-												<input type="date" name="qid-expiry" id="qid-expiry"
+												<input type="date" name="qidExpiry" id="qidExpiry"
 													class="form-input material__input" required="">
-												<label for="qid-expiry" class="material__label" style="top: -20px;">QID
+												<label for="qidExpiry" class="material__label" style="top: -20px;">QID
 													Expiry
 													<abbr title="required" class="required">*</abbr>
 												</label>
@@ -246,9 +246,9 @@
 										<div class="col-lg-6">
 											<!-- Driving License Expiry -->
 											<div class="material__form-group form-group">
-												<input type="date" name="driving-license-exp" id="driving-license-exp"
+												<input type="date" name="drivingLicenseExp" id="drivingLicenseExp"
 													class="form-input material__input" required="">
-												<label for="driving-license-exp" class="material__label"
+												<label for="drivingLicenseExp" class="material__label"
 													style="top: -20px;">Driving
 													License Expiry
 													<abbr title="required" class="required">*</abbr>
