--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							data-easeout="default" data-slotamount="1" data-masterspeed="1200" data-delay="8000"
 							data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/page-title/services2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution//scaffolding banner.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -239,7 +239,7 @@
 						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/portfolio/v-2/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution/rider banner.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
