--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 							data-easeout="default" data-slotamount="1" data-masterspeed="1200" data-delay="8000"
 							data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution//scaffolding banner.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
-								data-bgparallax="7" class="rev-slidebg">
+							<img src="img/revolution//scaffolding banner.jpg" alt="" data-bgrepeat="no-repeat"
+								data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
 							<div class="tp-caption hero-text" data-x="30" data-y="center"
@@ -239,8 +239,8 @@
 						<li data-transition="scaledownfrombottom" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Sedona Theater">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/rider banner.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
-								data-bgparallax="7" class="rev-slidebg">
+							<img src="img/revolution/rider banner.jpg" alt="" data-bgrepeat="no-repeat"
+								data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
 							<div class="tp-caption hero-text" data-x="30" data-y="center"
@@ -461,7 +461,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Joeby Ragpa</span>
-								<span class="testimonial__company">Royenixs</span>
+								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
 
@@ -472,7 +472,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Alexander Samokhin</span>
-								<span class="testimonial__company">Royenixs</span>
+								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
 
@@ -483,7 +483,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Joeby Ragpa</span>
-								<span class="testimonial__company">Royenixs</span>
+								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
 
@@ -494,7 +494,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Alexander Samokhin</span>
-								<span class="testimonial__company">Royenixs</span>
+								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
 
