--- a/delivery-service.html
+++ b/delivery-service.html
@@ -12,7 +12,8 @@
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
 	<!-- Css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -260,9 +261,9 @@
 
 
 
-									<input type="submit" class="btn btn--lg btn--color btn--button" value="Submit"
-										id="submit-message">
-									<div id="msg" class="message"></div>
+									<input type="submit" class="btn btn--lg btn--color btn--button" value="Send Message"
+									id="submit-message">
+								<div id="msg" class="message"></div>
 								</form>
 							</div>
 
@@ -320,7 +321,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-money process__icon" aria-hidden="true"
+								<i class="fa-solid fa-money-bills" aria-hidden="true"
 									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">Attractive Incentives</h4>
 								<p class="process__text__rider">On top of our attractive Surge Fees, make additional
@@ -343,9 +344,8 @@
 								<i class="fa fa-bed process__icon" aria-hidden="true"
 									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">Accommodation</h4>
-								<p class="process__text__rider">For each project we establish relationships with
-									partners who
-									we know will help us.</p>
+								<p class="process__text__rider">All our riders/drivers are provided with a separate and
+									comfortable bed space and other accommodating facilities.</p>
 							</div>
 						</div>
 					</div>
