--- a/about.html
+++ b/about.html
@@ -168,13 +168,13 @@
 						<div class="col-lg-10">
 							<div class="intro text-center">
 								<h2 class="mb-32">Designing a Resilient Tomorrow</h2>
-								<p class="lead">For each project we establish relationships with partners who we know
-									will help us create added value for your project.
-									As well as bringing together the public and private sectors, we make
-									sector-overarching links to gather knowledge and to
-									learn from each other. The way we undertake projects is based on permanently
-									applying values that reinforce each other: socio-cultural
-									value, experiental value, building-technical value and economical value.</p>
+								<p class="lead">Royenix Contracting and Transporting is established in the heart of
+									Doha, Qatar. We have evolved into becoming a key player in the contracting and
+									transporting sector in the State of Qatar.</p>
+								<p class="lead">We are a young and professional team who fully trusts in teamwork and in
+									hard work,
+									so our clients hire us to ensure that every aspect of their projects are properly
+									governed, well executed and fully supported from beginning to end.</p>
 							</div>
 						</div>
 					</div>
