--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 						<div class="col-xl-6 col-lg-6" data-aos="fade-left">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/single/Insurance.jpg" class="service-1__img" alt="">
+									<img src="img/services/single/2.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Delivery Service</h3>
