--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>For each project we establish relationships with partners<br>
-								For the ordinary and the extraordinary scaffolding challenges,<br> Royenix is the right
+								}]'>For the ordinary and the extraordinary scaffolding challenges,<br> Royenix is the right
 								choice.
 							</div>
 
@@ -460,7 +459,7 @@
 									recommend this work for anyone seeking to increase.”</p>
 							</div>
 							<div class="testimonial__info">
-								<span class="testimonial__author">Joeby Ragpa</span>
+								<span class="testimonial__author">Ahmed Hassan</span>
 								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
@@ -471,7 +470,7 @@
 									amazing and talented! I will work only to help your sales goals.”</p>
 							</div>
 							<div class="testimonial__info">
-								<span class="testimonial__author">Alexander Samokhin</span>
+								<span class="testimonial__author">Abdullah Siraj</span>
 								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
@@ -482,7 +481,7 @@
 									recommend this work for anyone seeking to increase.”</p>
 							</div>
 							<div class="testimonial__info">
-								<span class="testimonial__author">Joeby Ragpa</span>
+								<span class="testimonial__author">Ahmed Hassan</span>
 								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
@@ -493,7 +492,7 @@
 									amazing and talented! I will work only to help your sales goals.”</p>
 							</div>
 							<div class="testimonial__info">
-								<span class="testimonial__author">Alexander Samokhin</span>
+								<span class="testimonial__author">Abdullah Siraj</span>
 								<span class="testimonial__company">Royenix</span>
 							</div>
 						</div>
