--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
 										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
 										<li><a href="./delivery-service.html">Delivery Service</a></li>
 
@@ -320,7 +319,8 @@
 						</div>
 					</div>
 				</div>
-			</section> <!-- end intro -->
+			</section>
+			<!-- end intro -->
 
 			<!-- Services -->
 			<section class="section-wrap pt-0 pb-0">
@@ -380,7 +380,8 @@
 						</div>
 					</div>
 				</div>
-			</section> <!-- end services -->
+			</section>
+			<!-- end services -->
 
 			<!-- Portfolio -->
 			<section class="section-wrap pt-48">
@@ -438,8 +439,8 @@
 					</div>
 
 				</div>
-			</section> <!-- end portfolio -->
-
+			</section>
+			<!-- end portfolio -->
 
 			<!-- Testimonials -->
 			<section class="section-wrap bg-dark-overlay" style="background-image: url(img/testimonials/bg.jpg);"
@@ -500,7 +501,8 @@
 					</div> <!-- end slider -->
 
 				</div>
-			</section> <!-- end testimonials -->
+			</section>
+			<!-- end testimonials -->
 
 			<!-- Contact -->
 			<section class="section-wrap">
@@ -573,8 +575,8 @@
 
 					</div>
 				</div>
-			</section> <!-- end contact -->
-
+			</section>
+			<!-- end contact -->
 
 			<!-- Footer -->
 			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
@@ -643,14 +645,17 @@
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
-			</footer> <!-- end footer -->
+			</footer>
+			<!-- end footer -->
 
 			<div id="back-to-top">
 				<a href="#top"><i class="ui-arrow-up"></i></a>
 			</div>
 
-		</div> <!-- end content wrapper -->
-	</main> <!-- end main wrapper -->
+		</div>
+		<!-- end content wrapper -->
+	</main>
+	<!-- end main wrapper -->
 
 	<script type="text/javascript">
 		function googleTranslateElementInit() {
